--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+	max-width: 600px;
+	margin: auto;
+	text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+	margin-bottom: 20px;
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.form-group {
+	margin-bottom: 15px;
+	text-align: left;
+}
+
+.btn {
+	width: 100%;
+	padding: 10px;
+	font-size: 16px;
+	border-radius: 8px;
+	transition: background 0.3s ease-in-out;
+}
+
+.btn-primary {
+	background-color: #007bff;
+	border: none;
+}
+
+.btn-primary:hover {
+	background-color: #0056b3;
+}
+
+.btn-default {
+	background-color: #6c757d;
+	color: white;
+	border: none;
+}
+
+.btn-default:hover {
+	background-color: #5a6268;
+}
+
+.container-cam {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.control{
+	display: flex;
+	gap: 50px;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+
+#video-canvas {
+	display: block;
+	max-width: 100%;
+	height: 600px;
+	aspect-ratio: 16 / 9;
+	border: 2px solid #ddd;
+	border-radius: 8px;
+	margin: 20px auto;
+}
+
+.ptz-ctl-box {
+	margin-left: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+	max-width: 100%;
+	height: auto;
+	margin-top: 20px;
+	border: 2px solid #333;
+	background-color: #1d1d1d;
+	border-radius: 10px;
+	width: 200px;
+	height: 200px;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+	/* bottom: 30px; */
+	/* left: 50%; */
+	transform: translateX(-50%);
+}
+
+.ptz-pad-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+button.ptz-btn {
+	font-size: 24px;
+	color: #fff;
+	background: none;
+	border: none;
+	padding: 10px;
+	cursor: pointer;
+	transition: background 0.3s ease;
+}
+
+button.ptz-btn:hover {
+	background-color: #555;
+}
+
+.ptz-btn.up {
+	margin-bottom: 10px;
+}
+
+.ptz-btn.down {
+	margin-top: 10px;
+}
+
+.ptz-btn.left,
+.ptz-btn.right {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.ptz-btn.left {
+	left: 10px;
+}
+
+.ptz-btn.right {
+	right: 10px;
+}
+
+.ptz-btn.up {
+	top: 10px;
+}
+
+.ptz-btn.down {
+	bottom: 10px;
+}
+
+.secondary {
+	background-color: red;
+	width: 200px;
+	height: 100px;
+	color: white;
+	border-radius: 15px;
+	font-size: 25px;
+	border-color: red;
 }
